Added the git deployment script

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,15 @@
+# sample netlify.toml
 [build]
-  functions = "functions"
+command = "# no build command"
+  Functions = "functions" 
+  publish = "dist"
+  NODE_ENV ="16.0.0"
+
+[functions]
+  node_bundler = "esbuild"
+
+
+
 
 [[redirects]]
   from = "/*"
