--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # sample netlify.toml
 [build]
-command = "# no build command"
+command = "npm install"
   Functions = "functions" 
   publish = "public"
   NODE_ENV ="16.0.0"
