--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
-	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "netlify-lambda serve halo"
@@ -23,5 +22,6 @@
 		"node-fetch": "^2.6.7",
 		"querystring": "^0.2.1",
 		"xendit-node": "^1.21.7"
-	}
+	},
+	"proxy": "http://localhost/8888"
 }
